removed more deprecated methods causing warnings